--- a/package.json
+++ b/package.json
@@ -1,26 +1,1 @@
-{
-  "name": "faith-naff---caldwell-county-commissioner",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --debug --port 3000 --strictPort",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@google/genai": "^1.35.0",
-    "@tailwindcss/vite": "^4.1.18",
-    "openai": "^6.16.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.12.0",
-    "tailwindcss": "^4.1.18"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
-}
+{"name": "faith-naff---caldwell-county-commissioner", "private": true, "version": "1.0.0", "type": "module", "scripts": {"dev": "vite --debug --port 3000 --strictPort", "build": "vite build", "preview": "vite preview"}, "dependencies": {"@google/generai": "^1.35.0", "@tailwindcss/vite": "^4.1.18", "openai": "^6.16.0", "react": "^19.2.3", "react-dom": "^19.2.3", "react-router-dom": "^7.12.0", "tailwindcss": "^4.1.18"}, "devDependencies": {"@types/node": "^22.14.0", "@vitejs/plugin-react": "^5.0.0", "typescript": "~5.8.2", "vite": "^6.2.0"}}
